# amqp11

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  example_consume.cc  example_consume.cpp  example_get.cc  example_get.cpp  example_publish.cc  example_publish.cpp
examples/cmake/Modules/: FindAmqp11.cmake  FindRabbitmq.cmake
examples/reconnect_to_cluster_nodes/consumer/: consumer.cpp
examples/with_threads/consumer/: Makefile  SynchronizedQueue.h  consumer.cpp
examples/with_threads/producer/: Makefile  producer.cpp
include/: amqp11.h  amqp11.hpp
src/: AMQP.cc  AMQPBase.cpp  AMQPException.cpp  AMQPExchange.cpp  AMQPMessage.cpp  AMQPQueue.cpp  amqp11.cc  amqp_base.cc  amqp_exception.cc  amqp_exchange.cc  amqp_message.cc  amqp_queue.cc
