cmake_minimum_required(VERSION 2.8.4)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")

find_package (Amqp11 REQUIRED)
if (Amqp11_FOUND)
  add_executable (example_publish example_publish.cc ${AMQP11_HEADERS})
  add_executable (example_consume example_consume.cc ${AMQP11_HEADERS})
  add_executable (example_get example_get.cc ${AMQP11_HEADERS})
  include_directories (${AMQP11_HEADERS})
  link_directories (${PARENT_DIR}/lib)
else()
  message (FATAL_ERROR "Could not find amqp11 library")
  return ()
endif()

find_package(Rabbitmq REQUIRED)
if (Rabbitmq_FOUND)
  set (Rabbitmq_INCLUDEDIR "/usr/local/include")
  if (CMAKE_SIZEOF_VOID_P EQUAL 8)
    set (Rabbitmq_LIBDIR "/usr/local/lib64")
  else()
      set (Rabbitmq_LIBDIR "/usr/local/lib")
  endif()

  include_directories(SYSTEM ${Rabbitmq_INCLUDEDIR})
  link_directories(${Rabbitmq_LIBDIR})
else()
  message (FATAL_ERROR "Need rabbitmq-c library to continue build.")
  return()
endif()

target_link_libraries(example_consume ${AMQP11_LIBRARY} ${RABBITMQ_LIBRARIES})
target_link_libraries(example_publish ${AMQP11_LIBRARY} ${RABBITMQ_LIBRARIES})
target_link_libraries(example_get ${AMQP11_LIBRARY} ${RABBITMQ_LIBRARIES})

set (EXEC_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
message (STATUS "${EXEC_OUTPUT_PATH}")
install (TARGETS example_publish example_consume DESTINATION ${EXEC_OUTPUT_PATH})
